Update combo pages for GBVSR 2.10

--- a/antiairs.html
+++ b/antiairs.html
@@ -9,51 +9,82 @@
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Antiairs</h1>
-		<h2>Corner Antiair</h2>
-		<code>2H > 236H~4 > 66H > 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-corner.mp4"/>
-		</video>
-		<p>The 66H is a slightly difficult and small optimization; can just walk up and 5H for more consistency. End in 5H > 22H to set up seals. End in 22U for a fuzzy setup. End in super to close the round. End in install to BM. The possibilities are endless.</p>
+		
 		<h1>Midscreen Meterless Antiairs</h1>
-		<h2>Midscreen Meterless Antiair (Counterhit)</h2>
+		<h2>Midscreen Meterless Antiair</h2>
 		<code>2H (counterhit) > 236H~4 > run forward > 5HHH > 623H > j.22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-midscreen-meterless-no-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-meterless-no-corner.mp4"/>
 		</video>
 		<p>2H counterhit gives you an extremely easy conversion with stop tornado. This also connects off low non-counterhits, but on high non-counter hits they'll recover before falling into the tornado. Note the weird 623H hit here; you get this if they're high enough, and it leaves them closer for better oki. If you're late on the 5HHH you'll get a clean hit and send them flying instead.</p>
-		<h2>Alternate Midscreen Meterless Antiair (Counterhit)</h2>
-		<code>2H (counterhit) > 236H~4 > run forward > 5H > 623M > 2M > 214H > 2M (> 22L or 22H)</code><br class="combo"/>
+		
+		<h2>Midscreen Meterless Antiair (Reaches Corner)</h2>
+		<code>2H (counterhit) > 236H~4 > run forward > 5H > 623M > 2M > 214H > 5H > 623H (> 22X)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-midscreen-meterless-reach-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-meterless-reach-corner.mp4"/>
 		</video>
-		<p>This 2H counterhit combo tacks on a bit more damage but costs you your seal setup, unless you reach the corner and wallbounce with 214H, where it becomes a no-strings-attached improvement over the previous combo. If you're slightly spaced out of the corner you can end in 22U for the 5U > j.6U fuzzy setup.</p>
+		<p>This 2H counterhit combo tacks on a bit more damage but costs you your seal setup, unless you reach the corner and wallbounce with 214H, where it becomes a no-strings-attached improvement over the previous combo.</p>
+		
 		<h2>Midscreen Meterless Antiair (No Counterhit)</h2>
 		<code>2H > 236H~8 > 214M</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-meterless-no-counter.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-meterless-no-counter.mp4"/>
 		</video>
 		<p>As mentioned earlier, low non-counter hits can be converted with stop tornado in the same way as counterhit combos. However off high non-counter hits it's difficult to convert into a full combo without meter. This is a nice consolation combo that gives good carry and mediocre oki.</p>
+		
 		<h1>Midscreen Metered Antiairs</h1>
-		<h2>Midscreen Metered Antiair (Counterhit)</h2>
-		<code>2H (counterhit) > 236H~4 > 214U > (delay) 2H > 623M > 2M > 214L</code><br class="combo"/>
+		<h2>Midscreen Metered Antiair</h2>
+		<code>2H (counterhit) > 214U > (delay)2H > 623M > 214H > 623H > j.22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-midscreen-metered.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-metered.mp4"/>
 		</video>
-		<p>Slightly difficult conversion. Replace 214L with 214H if you reach the corner and the wallbounce gives you time to set up seals. If you don't like the 623M > 2M, you can just do 623H > seals instead.</p>
+		<p>Works off most heights and distances, even far counterhits that would be challenging to pick up with stop tornado. Delay the second 2H until the enemy is next to you.</p>
+		
 		<h2>Midscreen Metered Antiair (No Counterhit)</h2>
 		<code>2H > 236H~8 > 66H > 214U > 2H > 623H > j.22L or j.22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-midscreen-metered-no-counter.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-metered-no-counterhit.mp4"/>
 		</video>
-		<p>This route gives more corner carry than the counterhit combo listed above. In reality they're pretty interchangeable - you can do either one off both counter and non-counter, but height control for the counterhit combo is much harder off up tornado.</p>
+		<p>Cool mid-combo 66H that gives great corner carry. You can skip the 66H entirely if you aren't comfortable with it.</p>
+		
 		<h1>Bonus Antiairs</h1>
+		
+		<h1>Corner Antiairs></h1>
+		<h2>Corner Antiair</h2>
+		<code>2H (counterhit) > 236H~4 > 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-antiair.mp4"/>
+		</video>
+		<p>Putting 214H as your first special after tornado sometimes bounces the opponent out of the corner, so I recommend using 623H if your cooldowns allow it. Ender is your choice. End in 5H > 22H to set up seals. End in 22U for a safejump setup. End in super to close the round. End in install to BM. The possibilities are endless.</p>
+		
+		<h2>Corner Antiair But Better</h2>
+		<code>2H (counterhit) > 236H~4 > 66H > 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-antiair-better.mp4"/>
+		</video>
+		<p>The 66H is slightly awkward and pretty much no one actually goes for it in matches, but if you're feeling saucy it's a small optimization.</p>
+		
+		<h2>Corner Antiair Meterless Safejump</h2>
+		<code>2H (counterhit) > 236H~4 > (delay)623H > j.214H > j.22H > j.2U > 5HHH (> j.8U whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-antiair-meterless.mp4"/>
+		</video>
+		<p>Cool meterless safejump setup if you want to be safe to DP but don't want to spend the meter. Delay the 623H until just as the tornado ends, or the opponent will be too high and drop out of the airball.</p>
+		
+		<h2>Corner Antiair (No Counterhit)</h2>
+		<code>2H > raging strike > (delay)5H > 623H > 5H > 214H > ender</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-antiair-no-counterhit.mp4"/>
+		</video>
+		<p>Off low no-counter antiairs you can do the previous combos, but off higher hits the opponent will recover before falling into stop tornado. Midscreen you would convert hits like this with up tornado, but in the corner the up tornado tends to miss, so the best way to stabilize the hit is to just eat the BP loss and use a raging strike.</p>
+		
 		<h2>Antiair Sideswap</h2>
-		<code>2H > 236H~4 > run under> 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
+		<code>2H > 236H~4 > run under > 5H > 623H > 5H > 214H > ender</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/antiair-sideswap.mp4"/>
 		</video>
-		<p>Basically the corner antiair combo, except you run under them first.</p>
+		<p>Literally the first corner antiair combo but you run under them first.</p>
+		
 		<h2>Corner Antiair Overhead Reset</h2>
 		<code>2H > 236H~8 > reset 66M > 2M > make up the rest</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
