--- a/camera-5050.html
+++ b/camera-5050.html
@@ -9,44 +9,49 @@
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Camera 50/50</h1>
-		<p>Note that all camera 50/50 setups now cost the full 50 meter as of patch 2.00 - you no longer get the 25% refund for linking j.22U in the air like this.</p>
 		<h2>Camera High</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.26U whiff > j.L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-high.mp4"/>
 		</video>
-		<p>Evil 50/50 setup that abuses the game's camera for a barely-reactable high/low. When I say barely-reactable I mean it. Like, I'm definitely not reacting. Looks harder than it is: though it looks like there's a big delay between the 99 and the 2X airdashes, it's actually all one button - just hold U the whole time.</p>
-		<p>Some advantages over fuzzy setups: can't be brave countered, if it's blocked it's still 100% unambiguously your turn, and it tends to do a little bit more damage. Some disadvantages: it's theoretically reactable, and it uses up all of your seals. Also, while the high is a safejump, the low (shown in the next combo) loses to DP.</p>
-		<p>One more thing: this setup is also very slightly better against parry characters than the fuzzy setups. With the fuzzy, if you do an empty jump to bait parry, your opponent can fuzzy mash to take back their turn. If you end this camera setup on j.21U whiff, you can bait a parry while standing at a distance safe enough to generally keep pressure.</p>
+		<p>Grimnir's most infamous mix. Evil 50/50 setup that abuses the game's camera for a barely-reactable high/low. When I say barely-reactable I mean it. This particular setup is a 20f overhead, but the tell is very ambiguous so in practice it's even better.</p>
+		<p>Looks harder than it is: though it looks like there's a big delay between the 99 and the 2X airdashes, it's actually all one button - just hold U the whole time.</p>
+		<p>The biggest appeal of camera setups is that they cannot be brave countered. A big disadvantage is that they are more seal-hungry than safejump setups, so if the opponent blocks you have less to play with. They're also theoretically reactable (i.e. fake mix), and while the high is a safejump, the low (shown in the next combo) loses to DP.</p>
+		<p>Camera stats: 20f overhead, net -5% meter, leaves 0 seals</p>
+		
 		<h2>Camera Low</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.23U whiff > 2L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-low.mp4"/>
 		</video>
 		<p>Pretty much the same as the previous combo, but your last dash is down-forward instead of forward. You can skip the 3U at the end to conserve a seal, but a suitably prepared opponent can react to the audio cue of you only dashing once.</p>
-		<h2>Camera Fuzzy</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		
+		<h2>Highball Camera</h2>
+		<code>(starter) > 623H > 2M > 236H~8 > superjump j.M > j.214H > j.22U > j.9U (> camera ender)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-fuzzy.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-highball.mp4"/>
 		</video>
-		<p>Extremely reactable high, but if your opponent's mind is focused on the camera mix they may forget to brave counter the fuzzy.</p>
-		<h2>Hard Camera Fuzzy</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> delay j.6U whiff > j.M fuzzy)</code><br class="combo"/>
+		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Worse meter gain than the previous route, but if you start with 100 meter, the extra seal actually lets you build back the 50% on hit to end the resulting combo in super, a privilege the original camera combo no longer gets.</p>
+		<p>Camera stats: 20f overhead, net -6% meter, leaves 1 seal</p>
+		
+		<h2>Double Seal Camera</h2>
+		<code>(starter) > 236H~6 > 22U > 5HH > 623H > j.8U > (delay)j.H (> j.22L > camera ender)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-fuzzy-hard.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-refund-1.mp4"/>
 		</video>
-		<p>The j.6U whiff is a very difficult manual timing. It's also pretty difficult to hit-confirm if the j.M hits overhead, though it being much more reactable makes this less likely.</p>
-		<h2>Camera Midscreen</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)5HH > 623H > j.22U > j.99U (> ender)</code><br class="combo"/>
+		<p>In patch 2.00, Grimnir was nerfed to no longer get U skill refund when linking a U skill midair after an H special. This was the devs' chosen nerf to camera mix.</p>
+		<p>It didn't work.</p>
+		<p>This is what is known as a "refund route" because it sets up camera mix in a way where we still get the 25% U skill refund. If you're looping camera mix into camera mix you won't see much of a difference, but it's notably convenient if you want to do camera mix -> super because you no longer need to convolute your routing to build the meter in time.</p>
+		<p>It is 1f more reactable than the previous two setups, but it also uniquely leaves behind 2 ground seals, so you're in a stronger position on block.</p>
+		<p>Note that you are supposed to slightly delay the j.H until you fall on top of the seal like I did in the video. If you press it instantly the combo won't drop but it will be very significantly more reactable.</p>
+		<p>Camera stats: 21f overhead, net +0% meter, leaves 2 seals</p>
+		
+		<h2>Fast Camera</h2>
+		<code>(starter) > 623H > j.214H > j.22H > j.2U > j.8U > j.H > j.9U > j.22U > j.9U (> camera ender)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-midscreen.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-refund-2.mp4"/>
 		</video>
-		<p>Here's how you turn a midscreen hit into a camera 50/50.</p>
-		<h2>Extra Seal Camera Setup</h2>
-		<code>(starter) > 623H > 2M > 236H~8 > superjump j.M > j.236H > j.22U > j.9U</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-bonus-seal.mp4"/>
-		</video>
-		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Can also end in 3U6U > j.M for fuzzy. If you start with 100 meter, you can build back the 50% on hit to end the resulting combo in super, a privilege the old camera combo no longer gets on patch 2.00.</p>
+		<p>Also known as the "Yobu camera" after the player that discovered it, but that name is misleading because Yobu has found way more than one setup. Another refund route. This one is interesting because it's actually *less* reactable than the original camera setup, a right no route has claimed before. It also doesn't require tornado at all, so you can do it even if tornado is on cooldown. AND it builds significantly more meter than any of the previous setups. The only "downside" is that it only leaves behind 1 seal. But in general, you can think of this as the strongest known camera setup.</p>
+		<p>Camera stats: 18f overhead, net +20% meter, leaves 1 seal</p>
 	</body>
 </html>
