--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -8,71 +8,119 @@
 	</head>
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
-		<h1>Corner Fuzzy Setups</h1>
+		<h1>Corner Safejumps</h1>
+		
 		<h2>Your First Combo</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > 5HHH > 22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/basic-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/your-first-combo.mp4"/>
 		</video>
-		<p>Grimnir's basic corner combo. Not a fuzzy setup, but you should learn it first because the muscle memory for it is essential to the rest of his combo routing. Meterless, does a good chunk of damage, and sets up seals. Even without a setup, having seals up is already plenty threatening.</p>
-		<h2>Easy Metered Fuzzy</h2>
+		<p>Grimnir's basic corner combo. Not a safejump setup, but you should learn it first because the muscle memory for it is essential to the rest of his combo routing. Meterless, does a good chunk of damage, and sets up seals. Even without a setup, having seals up is already plenty threatening.</p>
+		
+		<h2>Metered Safejump</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > 22U (> 5U > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-fuzzy-easy.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-1.mp4"/>
 		</video>
-		<p>The first fuzzy combo you should learn: Grimnir's basic corner combo, but ending in 22U. It's a good setup with no major flaws. A minor flaw: it uses one seal to time the j.H. You'll see this in a lot of setups, because airdash > j.H has a much more lenient timing than jump > j.H. And of course it requires 50 meter (but with the refund only costs 25). That said it's pretty rare not to have the meter at the end of this combo, it's very easy, very consistent, and ends you with 2 ground seals.</p>
-		<p>Sidenote, all fuzzy combos (including this one) safejump unless stated otherwise.</p>
-		<h2>Improved Metered Fuzzy</h2>
-		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > land > rejump j.22U (> land > 5L whiff > jump > j.H fuzzy)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-fuzzy-alt.mp4"/>
-		</video>
-		<p>This combo is also easy and consistent, though a couple parts take a little practice. The 5L > 5H link might be weird at first, but it's also a really good frametrap on block so it's worth learning even if you don't like this combo. If you really hate it you can replace it with 5LL for a medium-sized damage hit. The other weird part is the rejump j.22U. Hopefully you're okay with using the skill button because the technical input for it is probably impractical. The main advantage of this combo over the previous one is the additional air seal.</p>
-		<h2>Meterless Fuzzy</h2>
+		<p>The first safejump setup you should learn: Grimnir's basic corner combo, but ending in 22U. It's a good setup with no major flaws.</p>
+		<p>Minor flaw #1: it requires 50 meter (but with the refund only costs 25). Grimnir builds meter very quickly so you'll almost always have enough, but especially early in the round it can be good to save and avoid falling below 50% in case you get reset to neutral.</p>
+		<p>Minor flaw #2: it uses one seal to time the j.H. This is the easiest and most consistent safejump out of 22U, but if you're a little more confident in your button presses you can end the combo in (2L whiff > jump forward > j.H safejump) to conserve the extra seal.</p>
+		<p>All that said the combo as written is still excellent - solid damage, easy, consistent, and the starter is very common. Combos like this where the first special is 214H are good to learn because you can do them out of any starter, or even if the opponent isn't quite in the corner yet. There will be setups later that only work off of close starters like autocombo while standing directly in the corner. They're still valid setups, but because they're more specific you won't have as many chances to hit them in a match.</p>
+		
+		<h2>Standard Meterless Safejump</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy.mp4"/>
 		</video>
-		<p>Pretty similar to the previous combo. Its big advantage is that it doesn't cost you 25 meter. Its big disadvantage is that it puts your seals on cooldown for 10 seconds, so when your opponent brave counters you, you now have to play with no seals. It also does a little less damage (naturally, because you aren't spending meter). That said this is a good combo if you want to conserve your meter. Just don't be too stingy - meter gain in this game is super fast.</p>
-		<h2>Sealless Fuzzy</h2>
-		<code>(fuzzy) > j.22U > j.3U > 5H > 214H > 5H > 623H > 22U > 5H > raging strike > raging chain</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/sealless-fuzzy.mp4"/>
-		</video>
-		<p>You can fuzzy tall characters in the corner even if you don't have any seals up because they're big enough for the j.22U hitbox to launch them. Low damage, but high surprise factor. If you do rising j.L for the fuzzy hit instead of rising j.M it works on a few bonus semi-tall characters. Combo listed spends all your resources for high damage (and leads into a fuzzy setup if they live), but you can end it however you're feeling that day if you want to conserve.</p>
-		<p>Tall characters (can rising j.M > j.22U): Grimnir, Katalina, Percival, Metera, Vaseraga, Soriz, Eustace, Beelzebub, Belial, A.Belial, Versusia, Ladiva, Lowain, Lucilius, Sandalphon</p>
-		<p>Semi-tall characters (can rising j.L > j.22U): Zooey, Yuel, Siegfried, 2B</p>
-		<h1>Bonus Fuzzy Setups</h1>
+		<p>This is Grimnir's easiest and most popular meterless safejump setup. It's also consistent, though a couple parts take a little practice. The 5L > 5H link might be weird at first, but it's also a really good frametrap on block so it's worth learning even if you don't like this combo. If you really hate it you can replace it with 5LL for a medium-sized damage hit.</p>
+		<p>Note that this setup is a j.M safejump. j.H will work, but it actually loses to wakeup throw. This is forbidden knowledge so your opponent probably doesn't know, up to you whether or not you want to chance it. The biggest downside of j.M safejump is that it can be rolled, so you need to be ready to react to more options.</p>
+		
+		<h1>Bonus Routes</h1>
 		<p>These setups are either more difficult or less useful than the above setups. They still have their uses, especially if your execution is good, but you should learn them after.</p>
-		<h2>Old Meterless Fuzzy</h2>
+		
+		<h2>Old Meterless Safejump</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.6U > j.M > 2.H (> 5U > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-hard.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/old-route-1.mp4"/>
 		</video>
-		<p>This was the popular fuzzy route on the release version of the game. Leaves you with only one ground seal, and on current patch the j.H is manually timed (you must press about as late as possible), but it does more damage than the other meterless setup and has a little more room for ambiguity/shenanigans (e.g. you're less likely to get fuzzy mashed out of your empty jump throw).</p>
-		<h2>66H Fuzzy</h2>
-		<code>(starter) > 214H > 5L > 623H > 5H > 236H~8 > 66H > 22U</code><br class="combo"/>
+		<p>This was the popular route on the release version of the game. It's pretty difficult, but it's another meterless safejump from a common starter, and the weird jump arc of the 5U leaves a little more room for ambiguity than regular safejumps.</p>
+		
+		<h2>Metered Safejump (rejump j.22U)</h2>
+		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.22U (> land > 5L whiff > jump > j.H fuzzy)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/rejump-22u-1.mp4"/>
+		</video>
+		<p>Alternate ender to the standard meterless safejump combo listed near the top of this page. The rejump j.22U is slightly awkward but very consistent. Strongly recommend using the skill button instead of manually inputting 22U. This ender is entirely interchangeable with the meterless ender (rejump j.H > j.22H > j.M safejump). For simplicity, any future combos that use these enders will list the meterless one, but know that you can do this one instead if you want to.</p>
+		
+		<h2>Metered Safejump (delay 22U)</h2>
+		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > (delay)22U (> 5H whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-delay-22u-1.mp4"/>
+		</video>
+		<p>Slightly more difficult version of the previous route. Its big appeal is the ambiguity in the timing. Not very useful as a safejump, but shows its true worth when we start talking about <a href="https://grimnir-combos.github.io/empty-lows.html">empty low setups</a> because your frame advantage depends on how much you delay 22U. Earlier 22U hits are more plus.</p>
+		
+		<h2>Meterless j.214H Safejump</h2>
+		<code>autocombo > 623H > j.214H > j.22H > j.2U > 5H > 236H~8 > 5HHH (> j.8U whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-new-1.mp4"/>
+		</video>
+		<p>The j.22H > j.2U link is awkward and takes getting used to. It will show up in several of these bonus routes, so it's good to learn. This combo does a bit more damage than the meterless combos listed in the main section of the page, but it uses up an additional seal so the trade is questionable. Again, the main appeal of these bonus routes is just "doing a different combo."</p>
+		<p>Note the starter. Unlike routes that place 214H as your first special, 623H routes require you to already be hugging them in the corner, so you're less likely to get this hit in a match. It works out of a couple situations other than autocombo, e.g. 2L f.L 623H, but for simplicity I'm just going to list combos like these as autocombo starters.</p>
+		
+		<h2>Metered j.214H Safejump</h2>
+		<code>autocombo > 623H > j.H > rejump j.H > j.214H > 5H > 236H~8 > 22U > 2H (> 5U > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-new-1.mp4"/>
+		</video>
+		<p>Pretty easy metered safejump that does very good damage compared to the mainline route. Its downside is, again, that the starter is more specific.</p>
+		
+		<h2>Meterless Skyhigh Safejump</h2>
+		<code>autocombo > 623H > j.H > rejump j.H > j.214H > j.22H > j.2U > 2H > 8U (delay 8U whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-skyhigh-1.mp4"/>
+		</video>
+		<p>Funny highjump safejump. Unfortunately a little more difficult than it looks. You need to manually delay the second 8U or you'll land before your opponent and whiff the j.H.</p>
+		
+		<h2>Metered Skyhigh Safejump</h2>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.38U > j.68U > j.22U (> j.248U whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-skyhigh-1.mp4"/>
+		</video>
+		<p>Funny highjump safejump, metered edition. The convoluted dash pattern does bonus mental damage to your opponent (and your seal count). This one is actually easier than it looks. Let go of the button after the j.38U, and the j.68U will time itself. The j.248U isn't quite autotimed, but the timing is pretty lenient.</p>
+		
+		<h2>Zipper Safejump</h2>
+		<code>autocombo > 623H > j.H > rejump j.H > j.214H > j.22H > j.2U > 8U > j.H > 2H (> delay 5U > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/zipper-1.mp4"/>
+		</video>
+		<p>Up-down-up-down-up-down. Very fun meterless safejump. You need to delay the 5U cancel out of 2H until one of the late cancel frames or your j.H will miss. You'll need this delayed cancel technique again for an actually useful cashout combo later.</p>
+		
+		<h2>Grounded Tornado Safejump</h2>
+		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > 623H > j.H > 2H > 5U > j.M > j.214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/grounded-tornado.mp4"/>
+		</video>
+		<p>You need to be close to the opponent. Premium damage for a meterless route, even beating out most metered variants. If you have seals set up somewhere other than the corner the 5U will ruin the combo, so sub out the ender for whatever you feel confident in making up on the spot.</p>
+		
+		<h2>66H Safejump</h2>
+		<code>(starter) > 214H > 5L > 623H > 5H > 236H~8 > 66H > 22U (> 5L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/66h-fuzzy.mp4"/>
 		</video>
-		<p>You can end it either with the 5L whiff or the 5U > j.6U whiff ender, but the timing for the former is much more strict. Does more damage and looks way cooler, but leaves you with a worse tornado cooldown.</p>
-		<h2>Cooler 66H Fuzzy</h2>
-		<code>autocombo > 623H > j.H > rejump j.H > j.214H > 5H > 236H~8 > 66H > 22U</code><br class="combo"/>
+		<p>Now we get into 66H routes. Using 66H mid-combo is pretty difficult. You need to make sure you hold forward and press dash, and *then* H. Don't press them at the same time. You also need to make sure to wait until your character can move before pressing it because you can't buffer dash attacks. Basically, the timing is hard. These are the bonus routes of the bonus routes.</p>
+		
+		<h2>66H Safejump But Cooler</h2>
+		<code>autocombo > 623H > j.H > rejump j.H > j.214H > 5H > 236H~8 > 66H > 22U (> 5L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/66h-fuzzy-alt.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/66h-fuzzy-but-cooler.mp4"/>
 		</video>
 		<p>Bonus swag points for comboing into airball. Also tacks on a bit more damage. But if you're too far the combo will drop.</p>
-		<h2>Grounded Tornado Fuzzy</h2>
-		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > 623H > j.H > 2H > 5U > j.M > j.214H > 22U</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-grounded-tornado.mp4"/>
-		</video>
-		<p>You need to be close to the opponent. Does even more damage than either of the previous combos. If you have seals set up somewhere other than the corner the 5U will ruin the combo, so sub out the ender for whatever you feel confident in making up on the spot.</p>
-		<h2>Air Seal Fuzzy</h2>
-		<code>(starter) > 623M > j.1U > 5H > 236H~8 > 66H > 623H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		
+		<h2>Air Seal 66H Safejump</h2>
+		<code>(starter) > 623M > j.1U > 5H > 236H~8 > 66H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy-alt.mp4"/>
 		</video>
-		<p>Requires an air seal already set and you need to be close to the opponent. Does a bit more damage than the other meterless fuzzy. Doing j.2U instead of j.1U makes the combo more consistent for literally no downside, but it doesn't look as cool. Can also do the rejump j.22U > 5L whiff ender for a little more damage and an extra air seal.</p>
+		<p>Requires an air seal already set and you need to be close to the opponent. Doing j.2U instead of j.1U makes the combo more consistent for literally no downside, but it doesn't look as cool.</p>
 	</body>
 </html>
