--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 	</head>
 	<body>
 		<h1>Grimnir Combos</h1>
-		<p>Fuzzies as a concept have been removed from the game as of patch 2.10. Anything mentioning the fuzzy is outdated. It will take a bit to update the page. For now, think of all (formerly) fuzzy setups as safejump setups instead.</p>
-		<p>Tornado setups, camera setups, U skill combos, and super combos are all fully intact.</p>
 		<a href="https://grimnir-combos.github.io/recommended.html">RECOMMENDED COMBOS FOR NEW GRIM PLAYERS</a><br/>
-		<a href="https://grimnir-combos.github.io/corner-fuzzy.html">Corner Fuzzies</a><br/>
+		<a href="https://grimnir-combos.github.io/corner-fuzzy.html">Corner Combos</a><br/>
 		<a href="https://grimnir-combos.github.io/camera-5050.html">Camera 50/50</a><br/>
 		<a href="https://grimnir-combos.github.io/tornado-setups.html">Tornado Setups</a><br/>
-		<a href="https://grimnir-combos.github.io/midscreen.html">Midscreen Setups</a><br/>
+		<a href="https://grimnir-combos.github.io/midscreen.html">Midscreen Combos</a><br/>
 		<a href="https://grimnir-combos.github.io/antiairs.html">Antiairs</a><br/>
+		<a href="https://grimnir-combos.github.io/empty-lows.html">Empty Lows</a><br/>
+		<a href="https://grimnir-combos.github.io/gimmicks.html">Gimmicks</a><br/>
 		<a href="https://grimnir-combos.github.io/u-skill-starters.html">U Skill Starters</a><br/>
 		<a href="https://grimnir-combos.github.io/super-combos.html">Super and Cashout Combos</a><br/>
 		<a href="https://grimnir-combos.github.io/install.html">Install Tech</a><br/>
-		<p>Grimnir tech resource. Links to combos/setups above. Below is an overview of the game's combo system and a brief introduction to Grimnir's fuzzy setups.</p>
+		<a href="https://grimnir-combos.github.io/matchup-notes.html">Matchup Notes</a><br/>
+		<p>Grimnir tech resource. Links to combos/setups above. Below is an overview of the game's combo system and some terminology explanation.</p>
 		<p>Granblue combo basics: Granblue's "combo limit" system only kicks in after the opponent is launched, so as long as the opponent is grounded you can do as many hits as you can fit in without it affecting the launcher portion of the combo. As a result you'll usually see combos start with (starter) because, well, it actually doesn't matter. Some common (starter)s:</p>
 		<ul>
 			<li>autocombo</li>
@@ -43,15 +44,7 @@
 		<p>What do the numbers mean? It's called "numpad notation" and they represent directions. 2 is down, 6 is forward, 4 is backward. Grimnir's combo notation is extra fun because you get to use stuff like 7 and 9 for some combos. Most characters don't get to do that. Grimnir privilege.</p>
 		<p>For tornado specifically you'll see "236H~X". This is to denote the tornado followup. 236H~8 is up tornado. 236H~4 is stop tornado.</p>
 		<p>You'll also see "rejump" in some combos. This means to land, jump again, and do the input. Another thing most characters in this game don't get to do, but you're playing a cool character so you get to do the cool stuff.</p>
-		<p>What is the fuzzy? Without getting into the inner workings, it's hitting a falling jump attack, and then hitting a second jump attack while rising for a sort of "double overhead." You can either do the double overhead, or you can go low, so the opponent has to guess 50/50 or brave counter. The most common fuzzy is falling j.H > rising j.M > j.3U seal dash. It looks like this:</p>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/raw-fuzzy.mp4"/>
-		</video>
-		<p>If you hit the j.H low enough the execution for the fuzzy is actually pretty easy. Unfortunately, the timing is very strict. A lot of Grimnir's combo routing revolves around making this setup "autotimed" - i.e. if you hit the falling j.H on your opponent's wakeup you will have enough blockstun for rising j.M. Here is the easiest fuzzy setup in the game, and the one you should learn first:</p>
-		<code>throw > j.H fuzzy</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/throw-fuzzy.mp4"/>
-		</video>
-		<p>The following characters are too short for Grimnir to fuzzy: Charlotta, Narmaya, Cagliostro, Anre, Anila</p>
+		<p>What is the fuzzy? Without getting into the inner workings, it's hitting a falling jump attack, and then hitting a second jump attack while rising for a sort of "double overhead." You might see it in old gameplay videos, but fuzzies as a concept were entirely removed in version 2.10 and you can no longer perform them.</p>
+		<p>The Street Fighter 6-style frame meter at the bottom of each video is a mod: https://github.com/agersant/gbvsr-frame-meter Not necessary but can help you figure out what you're doing wrong.</p>
 	</body>
 </html>
