--- a/midscreen.html
+++ b/midscreen.html
@@ -12,74 +12,95 @@
 		<h2>Meterless Midscreen</h2>
 		<code>(starter) > 214L</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-meterless.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-meterless.mp4"/>
 		</video>
 		<p>Grimnir's meterless midscreen conversions are pretty average. Off very distant hits (including most whiff punishes) you can't even connect 214L. If your starter is autocombo, you can end on 214M instead for greater corner carry.</p>
+		
 		<h2>Simple Midscreen</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623M > 2M > 214H (> 22L or 22H or 22U)</code><br class="combo"/>
+		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623M > 2M > 214H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/basic-midscreen.mp4"/>
 		</video>
-		<p>Your easiest (actual) midscreen combo. If you're dropping the 2M after 623M it's probably because you're doing the 2H too late. End on 22L or 22H if you reach the corner and wallbounce with 214H. End on 22U if you're a little bit spaced (it whiffs if you're too close) and you can do the 5U > j.6U > j.H fuzzy setup.</p>
-		<h2>Midscreen Fuzzy</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 22U > 5H > 623L > 9U > j.M > j.9U6U whiff > j.H fuzzy</code><br class="combo"/>
+		<p>Your easiest (actual) midscreen combo. If you're dropping the 2M after 623M it's probably because you're doing either the 214U or the 2H too late. You want all inputs as early as possible.</p>
+		<p>If you reach the corner for wallbounce you gain a lot of flexibility with the ender. The one shown in the video is 5L > 22H, which leaves you +1 in their face. Note that any button you press here will lose to wakeup throw. Set up single seal instead if you want to safely take pressure with a button.</p>
+		<p>If you're close enough to the corner after the 2M you can press 623H > j.22H instead to safely set up seals.</p>
+		<p>If you're a little spaced out of the corner, you get a higher wallbounce that leaves you enough time to end in 22U for a safejump setup.</p>
+		
+		<h2>Midscreen Safejump (f.L)</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > 22U > f.L > 623L (> 9U whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fl-1.mp4"/>
 		</video>
-		<p>If 214U takes you close-ish to the corner, you can spend three of your 22U seals to go into this easy fuzzy setup. You can do j.6U6U whiff instead to knowledge check with an empty low.</p>
-		<h1>Midscreen Setups (no corner)</h1>
-		<p>Listed below are midscreen setups you can do if you *won't* reach the corner. Midscreen fuzzies are generally harder, but the setups leave a lot of room to do goofy things and catch your opponent off-guard.</p>
-		<h2>Midscreen Fuzzy (92U6U)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > 5H > 623L > 9U > (delay)j.2U (> land > j.6U whiff > j.M fuzzy)</code><br class="combo"/>
+		<p>Your easiest midscreen safejump setup. Has less corner carry than the previous combo and spends an additional 25%, but gives you a safejump from anywhere on screen. Also leaves a little bit of room for wacky shenanigans, which are covered in more detail on other pages.</p>
+		
+		<h2>Midscreen Safejump (929U)</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > 2U (> delay 9U whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-926u.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-929-1.mp4"/>
 		</video>
-		<p>The easiest midscreen fuzzy setup, but with downsides: it is either a fuzzy or a safejump, but never both at the same time. Hit the j.2U on the top seal early for fuzzy, late for safejump. Also, the rigidity of it leaves the least room to do tricky non-fuzzy things to your opponent.</p>
-		<h2>Midscreen Fuzzy (f.L)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 22U > f.L > 623L > 9U whiff > j.H fuzzy</code><br class="combo"/>
+		<p>Delay the 9U whiff at the end very slightly for this easy safejump setup. Its big appeal over the previous setup is the high ambiguity in the timing, which opens the possibility for a tricky empty jump low.</p>
+		
+		<h2>Midscreen Safejump (92U6U)</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > 5H > 623L > 9U > (delay)j.2U (> rejump j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-f.l.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-926-1.mp4"/>
 		</video>
-		<p>The most popular midscreen fuzzy. The combo is easy, but getting the height for autotime j.H fuzzy can be difficult, so you may have to manual time the j.H, or eyeball it and go low if your j.H hits too high. If you press a quick j.3U you can go for a crossup low. You can also do j.6U2U with the top seals after the 9U whiff for a fast crossup. Loses to block button, but sometimes you gotta keep 'em honest.</p>
-		<h2>Midscreen Fuzzy (7U6U)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > delay j.M (> j.7U6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<p>Delay the j.2U a little bit or it won't be a safejump. In fact, if you do the j.2U instantly you'll even lose to wakeup jab. Has the most corner carry of the midscreen safejump routes, though only by a little bit.</p>
+		
+		<h2>Midscreen Crossup (22[L])</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > j.M (> 22[L] > j.6U whiff > j.M)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-76u.mp4"/>
-		</video>
-		<p>The rare 7 input. Fairly difficult setup due to the awkward j.M link. Does a fair bit more damage than the previous combo and gives more corner carry, and if you don't drop you're guaranteed to have the height for autotime fuzzy.</p>
-		<h2>Midscreen Fuzzy (22[L])</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > j.M (> 22[L] > j.6U whiff > j.M fuzzy)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-22%5BL%5D.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22l-2.mp4"/>
 		</video>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-22%5BL%5D-crossup.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22l-1.mp4"/>
 		</video>
-		<p>Slightly difficult setup. Can crossup depending on your timings, which is funny but often results in you getting bravecountered straight into the corner. Weirdly if you crossup you seem to always get a standing hit on the opponent even if they crouch and get hit overhead by the first j.M. To avoid crossing up delay the 22[L] cancel slightly. Crossup is a safejump, sameside is not. Ability to mix up movement with other seal placements leaves a lot of room for devious trickery, e.g. press j.22L > j.3U instead for a quick low.</p>
-		<h2>Midscreen Fuzzy (929U)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > 2U (> 9U whiff > j.H fuzzy)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-929u.mp4"/>
-		</video>
-		<p>Easy combo for a difficult setup - the timing on the fuzzy j.H is quite strict. Do both of the first two dashes with one U press for help lining it up. Delay the last 9U dash very slightly for fuzzy, or press it early for an empty jump low.</p>
+		<p>Can crossup depending on your timings, which is funny but often results in you getting brave countered straight into the corner. To avoid crossing up delay the j.M and 22[L] cancel slightly. Crossup is a safejump, sameside is not.</p>
+		
 		<h1>Midscreen 623L</h1>
 		<h2>623L (reaches corner)</h2>
-		<code>(starter) > 623L > 6U > 2M > 236H > 214H > (delay)623H > j.H > rejump j.H (> j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 623L > 6U > 2M > 236H > run forward > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/623L-reach-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623l-reach-corner.mp4"/>
 		</video>
-		<p>When you hit your starter but don't quite reach your seal for a gale dash extension, you can use the forward movement from light spin to convert into a full combo. If you think you'll reach the corner with 214H, this sets up for an easy fuzzy. Need to eyeball the delay on the 623H based on distance from corner; sending it as early as possible won't let you connect j.H after.</p>
+		<p>When you hit your starter but don't quite reach your seal for a gale dash extension, you can use the forward movement from light spin to convert into a full combo. If you think you'll reach the corner with 214H, this sets up for a meterless safejump. Need to eyeball the delay on the 623H based on distance from corner; sending it as early as possible won't let you connect j.H after. If you aren't comfortable with guessing the timing for the safejump, you can just do 5H > 623H > j.22H instead to set up seals. This is preferable to dropping the combo.</p>
+		
 		<h2>623L (no corner)</h2>
-		<code>(starter) > 623L > 6U > 2M > 236H > 214U > 2H > 623H > 22H or 22L</code><br class="combo"/>
+		<code>(starter) > 623L > 6U > 2M > 236H > run forward > 214U > 2H > 623H > 22X</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/623L-wont-reach-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623l-no-corner.mp4"/>
 		</video>
-		<p>If you don't think you'll reach the corner with 214H, you can do this instead to push your opponent Quite Close to the corner and set up seals.</p>
-		<h2>623M</h2>
-		<code>(starter) > 623M > j.3U > (delay)5H > 214H > 5H > 623H > 22U</code><br class="combo"/>
+		<p>If you don't think you'll reach the corner with 214H, you can do this instead to push your opponent Quite Close to the corner and set up seals. Running forward is optional but gives additional corner carry, and honestly it helps with the timing.</p>
+		
+		<h2>623M (reaches corner)</h2>
+		<code>(starter) > 623M > j.3U > 5H > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/623M-reach-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623m-reach-corner.mp4"/>
 		</video>
-		<p>A similar concept with 623M. More damage than the 623L route and keeps your tornado cooldown, so if you're choosing between this combo and the 623L one, you'll generally prefer this one. If you know you won't reach corner with 214H, you can go straight into 214U from the j.3U for better corner carry.</p>
+		<p>A similar concept with 623M. Less damage than the 623L route but keeps your tornado cooldown. Generally you don't get the choice of which route you use because it depends where your seals are, but on the rare occasions you do get to choose, that's your tradeoff.</p>
+		
+		<h2>623M (reaches corner)</h2>
+		<code>(starter) > 623M > j.3U > 5H > 236H~8 > 214U > 2H > 623H > 22X</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-623m-no-corner.mp4"/>
+		</video>
+		<p>Similar variant if you won't reach the corner with 214H.</p>
+		
+		<h1>Bonus Routes</h1>
+		<p>These setups are either more difficult or less useful than their alternatives.</p>
+		
+		<h2>Midscreen to Corner Safejump</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > 22U > 5H > 623L > 9U > j.M (> j.9U6U whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-to-corner-1.mp4"/>
+		</video>
+		<p>If 214U takes you close-ish to the corner, you can spend three of your 22U seals to go into this easy safejump setup. Orrrrrr, you could spend one of your 22U seals and do the f.L > 9U whiff safejump setup instead. This was much more useful on an old patch where fuzzies were still in the game. These days, you won't find much practical use for it beyond "I want to do a different combo."</p>
+		
+		<h2>Midscreen Safejump (76U)</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > (delay)j.M (> j.7U6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-76u.mp4"/>
+		</video>
+		<p>The rare 7 input. Fairly difficult setup due to the awkward j.M link. Not really any concrete reason to go for this over one of the easier setups, but it looks pretty cool.</p>
 	</body>
 </html>
