--- a/super-combos.html
+++ b/super-combos.html
@@ -9,34 +9,47 @@
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Super and Cashout Combos</h1>
+		
 		<h2>Super Combo</h2>
 		<code>(starter) > raging strike > 5H > 623H > 5H > 236H~8 > 5H > 214H > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-combo.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super.mp4"/>
 		</video>
-		<p>This is the combo you do when you want to kill (or get really close). You might also go for it when you already have seals set up. If you have technical inputs turned on, make sure to technical input the super for your extra 10%. If you're too far after the raging strike, you'll get far H instead of close H. This still works, but you need to make sure to wait for both hits of f.H or you'll drop. If you're having trouble keeping the height for super, you can replace the 5H before tornado with 2M to make the combo much easier.</p>
-		<h2>Super Combo (grounded tornado)</h2>
-		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > raging strike > 5HH > 623H > 5H > 214H > super</code><br class="combo"/>
+		<p>Your general-purpose "I want to kill you (or get really close)" super combo. If you have technical inputs turned on, make sure to technical input the super for your extra 10%. If you're too far after the raging strike, you'll get far H instead of close H. This still works, but you need to make sure to wait for both hits of f.H or you'll drop. If you're having trouble keeping the height for super, you can replace the 5H before tornado with 2M to make the combo much easier.</p>
+		
+		<h2>Super With Seals</h2>
+		<code>(starter) > 214H > 2M > 236H~8 > 5H > 623H > j.22H > j.6U > j.M > super</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-with-seals.mp4"/>
+		</video>
+		<p>If you know your super won't kill, you might opt to set up seals instead. You can make this combo significantly easier by doing j.3U > j.H > super instead, but you'll lose the 10% damage bonus for linking a super with technical input. If you aren't using technical inputs there's no downside!</p>
+		
+		<h2>Super (Grounded Tornado)</h2>
+		<code>autocombo > 236H > 5MMM (standing) or 5HHH (crouching) > raging strike > 5H > 214H > 5H > 623H > j.22H > j.8U > (delay)j.2U > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-grounded-tornado.mp4"/>
 		</video>
-		<p>Slightly stronger super combo if you're close enough to combo out of grounded tornado. Replace the last 5H with 5M if going into SSBA (which is slightly slower).</p>
-		<h2>Super Seal Setup</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.3U > 5H > super</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-combo-seals.mp4"/>
-		</video>
-		<p>If you know your super won't kill, you might opt to set up seals instead. For SBA, you can fuzzy off this with short walk > j.6U > j.M fuzzy. The timing on making it a safejump is pretty tough, but the timing on hitting it in general is pretty lenient. Note that unlike the j.H fuzzy, the j.M fuzzy can be rolled out of. You *can* do the j.H fuzzy off the safejump (you can do it off any jump), but it's manually timed (much harder).</p>
+		<p>Slightly stronger super combo if you're close enough to combo out of grounded tornado. The timing on the dash pattern at the end is more difficult than it looks.</p>
+		
 		<h2>Midscreen Cashout</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > 2H > delay raging strike > 214U > 22U > 5M > raging strike > raging chain</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-big-dick-cashout.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-cashout.mp4"/>
 		</video>
-		<p>Spends all meter and 2 BP for excellent damage anywhere on screen.</p>
-		<h2>DP Punish</h2>
-		<code>5H (counter) > microdash > 22U > 5HHH > 6U > 5HH > 6U > 5HHH > 236H > 66L > 2M > raging strike > raging chain > 5H > 214H > 5H > 623H > 5H > raging strike > raging chain > 5H > raging strike > raging chain</code><br class="combo"/>
+		<p>Spends all meter and 2 BP for excellent damage anywhere on screen. This combo gives Grimnir excellent reward when successfully mashing out of the corner. Can and will steal rounds from the depths of despair. Worth learning.</p>
+		<p>I'll also note here that you can safejump after any raging chain with (2L whiff > jump). Can be good in other places too.</p>
+		
+		<h2>Antiair Cashout</h2>
+		<code>2H (counterhit) > 214U > 2H > (delay raging strike) > 214U > 22U > 5H > raging strike > raging chain</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/dppunish.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-metered-cashout.mp4"/>
+		</video>
+		<p>Similar concept to the previous combo, but off 2H counterhit instead. The very funny crossup safejump at the end of the video is a coincidence of the spacing I had in training mode and won't really happen in matches. It is a real safejump, though.</p>
+		
+		<h2>DP Punish</h2>
+		<code>5H (counter) > microdash > 22U > 5HHH > 6U > 5HHH > 6U > 5HHH > 236H > 214U > 5H > raging strike > 5H > 623H > j.214H > 22U > 5H > raging strike > raging chain</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/dp-punish.mp4"/>
 		</video>
 		<p>Simple easy pleasant consistent match-viable full resource DP punish. If you hit this round one, the mental damage will instantly win you the set.</p>
 	</body>
