--- a/tornado-setups.html
+++ b/tornado-setups.html
@@ -10,28 +10,79 @@
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Tornado Setups</h1>
 		<h2>Tornado In Front (j.214U)</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump forward j.214U (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump forward j.214U (> 236H~4 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-in-front.mp4"/>
 		</video>
-		<p>Sets up a tornado in front of the opponent. Frame data is approximately even but there's a big tornado in front of the opponent so they can't really do much. Autospaces the tornado so that if you run up and throw as early as possible the opponent will get picked up by the tornado for a full combo. Can also run up button, run up and throw bait with the top seal, or just wait for the opponent to do something dumb. How good this setup is is fiercely matchup-dependent; in some matchups, any non-reversal button the opponent presses will get clipped by the tornado, effectively trapping them. But in some matchups, something like sweep can reach Grimnir and nearly nullify it entirely (notably, the mirror). Unlike fuzzy and camera setups, you have to bait the opponent's reversal option, but because you aren't hitting a button into your opponent's wakeup it's generally much stronger against parry characters. Note that tornado-infront setups DO NOT work on Vaseraga and Ladiva - they are too wide, so the tornado covers them on wakeup instead.</p>
-		<h2>Tornado In Front (j.22U)</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22U > rejump j.L > j.1U > 5M (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
+		<p>Sets up a tornado in front of the opponent. Frame data is approximately even but there's a big tornado in front of the opponent so they can't really do much. Autospaces the tornado so that if you run up and throw as early as possible the opponent will get picked up by the tornado for a full combo. Can also run up button, run up and throw bait with the top seal, or just wait for the opponent to do something dumb.</p>
+		<p>How good this setup is is fiercely matchup-dependent; in some matchups, any non-reversal button the opponent presses will get clipped by the tornado, effectively trapping them. But in some matchups, something like sweep can reach Grimnir and nearly nullify it entirely (notably, the mirror).</p>
+		<p>Unlike fuzzy and camera setups, you have to bait the opponent's reversal option, but because you aren't hitting a button into your opponent's wakeup it's generally much stronger against parry characters. Note that tornado-infront setups DO NOT work on Vaseraga and Ladiva - they are too wide, so the tornado covers them on wakeup instead.</p>
+		
+		<h2>Tornado In Front (No Refund)</h2>
+		<code>(starter) > 214H > 2M > 623H > j.22U > rejump j.L > j.1U > 5M (> 236H~4 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront-minus.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-in-front-j22u.mp4"/>
 		</video>
 		<p>Worse version of the previous tornado setup that you can fall back on if your 22H is on cooldown. Leaves you significantly minus, but the tornado blocks many characters from punishing. If someone tries this on you in the mirror, you can punish them with sweep. As of the 2.00 patch, this setup now costs the full 50 meter (no refund).</p>
-		<h2>Tornado Behind</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > 22U (> 236H~8 whiff, set up behind the opponent)</code><br class="combo"/>
+		
+		<h2>Tornado In Front (Meterless)</h2>
+		<code>autocombo > 623H > j.214H > j.22H > j.9U > (delay)j.2U > rejump j.L > j.1U > 2M (> 236H~4 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-behind-new.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-in-front-meterless.mp4"/>
 		</video>
-		<p>Sets up a tornado behind the opponent. Largely powercrept by the tornado-infront setups because throw loses to mash, but can have value in some matchups where the above setups don't work as well (such as Vaseraga/Ladiva). The distance isn't super exact, but if you want to convert off throw you do need to either delay the tornado or let it go a little bit far - stopping it too soon leaves you too plus to combo out of throw.</p>
-		<h2>Old Tornado Behind</h2>
-		<code>(starter) > 214H > 5LL > 623H > j.22H > j.6U > j.L > 214U (> 236H~8 whiff, set up behind the opponent)</code><br class="combo"/>
+		<p>Meterless setup similar in concept to the no refund route listed directly above. All the same points apply. You're -8 on this setup, but again, the frame data doesn't really matter very much. Either the opponent has a button they can press to hit you through the tornado, or they don't.</p>
+		
+		<h2>Tornado Behind</h2>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > 22U (> 236H~4 whiff, set up behind the opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-behind.mp4"/>
 		</video>
-		<p>Similar to the previous setup, but it leaves the opponent closer so a potential throw is both easier to connect and less telegraphed, but in exchange, you lose your shimmy option. Does a bit less damage and, believe it or not, it's also significantly more difficult.</p>
+		<p>Sets up a tornado behind the opponent. Unlike tornado-in-front setups, tornado-behind setups are equal in value regardless of matchup. They work on Vaseraga and Ladiva, and they work no matter what buttons your opponent has. You will generally find it much harder to throw someone with these setups, though, because the tornado doesn't eat their buttons and disincentivize mashing.</p>
+		<p>The distance isn't super exact, but if you want to convert off throw you do need to either delay the tornado or let it go a little bit far - stopping it too soon leaves you too plus to combo out of throw.</p>
+		
+		<h2>Old Tornado Behind</h2>
+		<code>(starter) > 214H > 5LL > 623H > j.22H > j.6U > j.L > 214U (> 236H~4 whiff, set up behind the opponent)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-behind-214u.mp4"/>
+		</video>
+		<p>Similar to the previous setup, but it leaves the opponent closer so a potential throw is less telegraphed. In exchange, you lose your shimmy option. Does a bit less damage and, believe it or not, it's also significantly more difficult.</p>
+		
+		<h1>Tornado Throw Combos</h1>
+		<p>Combos you can do after the throw hits. Setup doesn't matter, you can do any of these off any valid tornado setup. If the opponent doesn't get picked up by the tornado or falls out early it means you were late on the throw.</p>
+		
+		<h2>Tornado Throw Super</h2>
+		<code>throw > 5H > 623H > j.214H > 5H > raging strike > super</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-throw-super.mp4"/>
+		</video>
+		<p>This is THE tornado throw combo to learn. 99% of the time you get the hit, you're going into this. Obscene damage because throw starters don't scale at all for some reason. If you have it enabled, remember to technical input the super for your extra 10%.</p>
+		
+		<h2>Tornado Throw Meterless Safejump</h2>
+		<code>throw > 5H > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U > j.M safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-throw-meterless-safejump.mp4"/>
+		</video>
+		<p>This ender may start to look familiar to you by now. If you don't want to kill your opponent this is an easy and consistent meterless safejump setup.</p>
+		
+		<h2>Tornado Throw Meterless Safejump (j.214H)</h2>
+		<code>throw > 5H > 623H > j.214H > j.22H > j.2U > 5HH (> j.8U whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-throw-meterless-safejump-2.mp4"/>
+		</video>
+		<p>Uses an extra seal for a little more damage and a stronger safejump button.</p>
+		
+		<h2>Tornado Throw Metered Safejump</h2>
+		<code>throw > 5H > 623H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-throw-metered-safejump.mp4"/>
+		</video>
+		<p>Metered safejump variant. If you aren't comfortable with the 2L framekill, you can do (5U > j.6U > j.H safejump) instead.</p>
+		
+		<h2>Tornado Throw Install</h2>
+		<code>throw > 5H > 214H > 623H > j.H > 2H (> install > j.6U whiff > j.M safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-throw-install.mp4"/>
+		</video>
+		<p>You could have just killed instead, but this is more fun. Sets up an install safejump off tornado throw.</p>
 	</body>
 </html>
